# edaparts

./: Dockerfile  LICENSE  Makefile  README.md  edaparts_v2.0.0.postman_collection.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
SQL/Views/Altium/: CreateCapacitorsCeramic0603View.sql  CreateCapacitorsCeramic0805View.sql  CreateCapacitorsCeramic1206View.sql  CreateCapacitorsCeramic1210View.sql  CreateCapacitorsCeramic2220View.sql  CreateCapacitorsCeramicView.sql  CreateCapacitorsElectrolyticView.sql  CreateCapacitorsTantalumView.sql  CreateConnectorsPcbView.sql  CreateCrystalOscillatorView.sql  CreateDiodeRectifierView.sql  CreateDiodeTVSView.sql  CreateDiodeZenerView.sql  CreateDiscreteLogicView.sql  CreateFerriteBeadView.sql  CreateFusePPTCView.sql  CreateInductorChokeView.sql  CreateLedIndicatorsView.sql  CreateMemoriesView.sql  CreateMicrocontrollersView.sql  CreateOpAmpsView.sql  CreateOptocouplersDigitalView.sql  CreateOptocouplersLinearView.sql  CreateOscillatorOscillatorView.sql  CreatePotentiometerView.sql  CreatePowerInductorView.sql  CreateResistors0603View.sql  CreateResistors0805View.sql  CreateResistors1206View.sql  CreateResistors1210View.sql  CreateResistors2220View.sql  CreateResistorsView.sql  CreateSwitchesPushbuttonView.sql  CreateSwitchesSwitchView.sql  (+9 more)
alembic/: env.py
alembic/versions/: 4cf347d8ae68_initial_migration.py
buildscripts/: make_venv.sh
container/: Containerfile  entrypoint.sh
container/compose/: docker-compose.yml  nginx.conf
edaparts/: main_test.py
edaparts/app/: api.py  commands.py  config.py  main.py
edaparts/dtos/: component_model_mapper.py  components_dtos.py  footprints_dtos.py  inventory_dtos.py  kicad_dtos.py  libraries_dtos.py  symbols_dtos.py
edaparts/migrations/: alembic.ini  env.py  migrations.py
edaparts/models/: __init__.py
edaparts/rest_layer/: footprint_component_reference_resource.py  footprint_element_component_reference_resource.py  symbol_component_reference_resource.py
edaparts/routers/: components.py  footprints.py  routers.py  symbols.py
edaparts/services/: component_service.py  database.py  exceptions.py  inventory_service.py  kicad.py  search_service.py  storable_objects_service.py  storage_service.py
edaparts/tasks/: tasks.py
edaparts/utils/: __init__.py  altium_olefile_parser.py  files.py  helpers.py  models_parser.py  sqlalchemy.py
tests/: __init__.py  component_model_mapper_test.py  component_service_test.py  conftest.py  inventory_service_test.py  search_service_test.py
(+256 files in other folders)
