[build-system]
requires = ["setuptools >= 60"]
build-backend = "setuptools.build_meta"

[project]
name = "edaparts"
version = "2.0.0"
description = "A simple EDA parts management service"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

keywords = ["sample", "setuptools", "development"]

authors = [
    { name = "Pablo Rodriguez Nava", email = "pablintino@hotmail.com" }
]

maintainers = [
    { name = "Pablo Rodriguez Nava", email = "pablintino@hotmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "alembic>=1.14.0",
    "annotated-types>=0.7.0",
    "anyio>=4.6.2.post1",
    "certifi>=2024.8.30",
    "click>=8.1.7",
    "dnspython>=2.7.0",
    "email_validator>=2.2.0",
    "fastapi>=0.115.4",
    "fastapi-cli>=0.0.5",
    "filelock>=3.16.1",
    "greenlet>=3.1.1",
    "h11>=0.14.0",
    "httpcore>=1.0.6",
    "httptools>=0.6.4",
    "httpx>=0.27.2",
    "idna>=3.10",
    "Jinja2>=3.1.4",
    "kiutils>=1.4.8",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.2",
    "mdurl>=0.1.2",
    "olefile>=0.47",
    "psycopg>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic_core>=2.23.4",
    "Pygments>=2.18.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "PyYAML>=6.0.2",
    "rich>=13.9.4",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "SQLAlchemy>=2.0.36",
    "starlette>=0.41.2",
    "typer>=0.12.5",
    "typing_extensions>=4.12.2",
    "uvicorn>=0.32.0",
    "uvloop>=0.21.0",
    "watchfiles>=0.24.0",
    "websockets>=13.1",
]

[project.urls]
"Source" = "https://github.com/pablintino/edaparts/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "alembic*"]

[tool.setuptools.package-data]
"edaparts.migrations" = ["alembic.ini"]
"edaparts.migrations.views" = ["**/*.sql"]

[project.scripts]
edaparts-migrate-current = "edaparts.app.commands:db_current_cmd"
edaparts-migrate-upgrade = "edaparts.app.commands:db_upgrade_cmd"
edaparts-migrate-downgrade = "edaparts.app.commands:db_downgrade_cmd"
